--- a/o/on/ono/ononesoftware.com.html
+++ b/o/on/ono/ononesoftware.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ononesoftware.com privacy policy that was archived on 2010-02-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100227042919id_/http%3A//www.ononesoftware.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ononesoftware.com privacy policy that was archived on 2010-09-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100915154811id_/http%3A//www.ononesoftware.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html lang="en" class="cufon-active cufon-ready"><head>
     <title>Privacy Policy - onOne Software</title>
@@ -7,21 +7,21 @@
     <meta name="copyright" content="Copyright 2010, onOne Software">
     <meta name="google-site-verification" content="Z00H9X41k13b65K3ppyR0j-_WIW_RW_5FTqL9pU0KnQ">
     <meta name="google-site-verification" content="KthDiOE5aEJba3RNlj1b-n92z1YaXl93z0kBZAV5sK8">
-    <link rel="stylesheet" type="text/css" href="/_css/reset.css?1256618451">
-    <link rel="stylesheet" type="text/css" href="/_css/base.css?1265242805">
-    <link rel="stylesheet" type="text/css" href="/_css/2col.css?1267033697">
+    <link rel="stylesheet" type="text/css" href="/_css/reset.css?1283469286">
+    <link rel="stylesheet" type="text/css" href="/_css/base.css?1283469286">
+    <link rel="stylesheet" type="text/css" href="/_css/2col.css?1283469285">
     <!--[if lte IE 6]>
-    <link rel="stylesheet" type="text/css" href="/_css/ie6.css?1256618451">
+    <link rel="stylesheet" type="text/css" href="/_css/ie6.css?1283469286">
     <script type="text/javascript" src="/_js/pngfix.js"></script>
     <script type="text/javascript">
         DD_belatedPNG.fix('#logo, #nav li, li.selected, .masthead-right .demo-button, #main .main-mid-wrapper, #main .main-mid-col2 img, #prod-index .wrapper, #prod-index .prod, #prod-index .prod img, #prod-index .bottom-wrap, #prod-index .bottom-wrap .col1 img, #prod-index .bottom-wrap .col2 img, #prod-detail .pricing, #prod-detail .action-buttons img, .masthead-img img, #prod-detail .main-quote, #prod-detail #main .wrapper, #prod-detail #main .specs-bottom, #prod-detail .grey-gradient, #downloads #masthead .col3, #downloads .dl-row, #downloads .form-bottom, #downloads .problem img, #downloads .solution img, #two-column .col1, #two-column .wrapper, #two-column .top-support-hours img, #two-column .support-prod, #two-column .support-box img, #two-column .award-img img, .footer-col1 h2, .footer-col1 img, .footer-logo');
     </script>
     <![endif]-->
     <!--[if IE 7]>
-    <link rel="stylesheet" type="text/css" href="/_css/ie7.css?1256618451">
+    <link rel="stylesheet" type="text/css" href="/_css/ie7.css?1283469286">
     <![endif]-->
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-    <script type="text/javascript" src="/_js/jquery-1.3.2.min.js"></script>
+    <script type="text/javascript" src="/_js/jquery-1.4.2.min.js"></script>
     <script type="text/javascript" src="/_js/cufon-yui.js"></script><style type="text/css">cufon{text-indent:0!important;}@media screen,projection{cufon{display:inline!important;display:inline-block!important;position:relative!important;vertical-align:middle!important;font-size:1px!important;line-height:1px!important;}cufon cufontext{display:-moz-inline-box!important;display:inline-block!important;width:0!important;height:0!important;overflow:hidden!important;text-indent:-10000in!important;}cufon canvas{position:relative!important;}}@media print{cufon{padding:0!important;}cufon canvas{display:none!important;}}</style>
     <script type="text/javascript" src="/_js/mp.font.js"></script>
     <script type="text/javascript" src="/_js/museo.font.js"></script>
@@ -41,7 +41,7 @@
                 <li><a href="/store/">store</a></li>
                 <li><a href="/downloads/">downloads</a></li>
                 <li><a href="/support/">support</a></li>
-                <li><a href="/tutorials/">tutorials</a></li>
+                <li><a href="/university/">university</a></li>
                 <li><a href="/about.php">company</a></li>
                 <li><a href="/blog/">blog</a></li>
                 <li class="last"><a href="http://www.ononeexchange.com/">onOne Exchange</a></li>
@@ -111,7 +111,7 @@
                     </form>
                     <script type="text/javascript" src="http://www.google.com/cse/brand?lang=en&amp;sitesearch=true"></script>
                     <p class="enews-signup"><a href="/subscribe.php">Sign up for onOne eNews</a></p>
-                    <p class="copyright">© Copyright 2010 onOne Software 1-888-968-1468</p>
+                    <p class="copyright">© Copyright 2010, onOne Software · 1-888-968-1468</p>
                 </div>
                 <div class="footer-col2">
                     <div class="clearfix">
@@ -128,12 +128,15 @@
                             <li><a href="/products/focalpoint/">FocalPoint</a></li>
                             <li><a href="/products/lightroom-presets/">Lightroom Presets</a></li>
                             <li><a href="/products/essentials-elements/">Photoshop Elements Plugins</a></li>
+                            <li><a href="/webinars/">Webinars</a></li>
                         </ul>
                         <ul class="col3">
                             <li><a href="/about.php">Company</a></li>
+                            <li><a href="/careers/">Careers</a></li>
                             <li><a href="/privacy.php">Privacy Policy</a></li>
                             <li><a href="/terms.php">Terms of Use</a></li>
                             <li><a href="/sitemap.php">Site Map</a></li>
+                            <li><a href="http://www.ononesoftware.de/">German Versions</a></li>
                         </ul>
                     </div>
                     <a href="/"><img src="/_img/footer/footer-logo.png" alt="onOne Software" class="footer-logo"></a>
@@ -143,12 +146,13 @@
     </div>
     </div>
 <script type="text/javascript">Cufon.now();</script>
-<script type="text/javascript">var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
-<script type="text/javascript">try {
-var pageTracker = _gat._getTracker("UA-31257-1");
-pageTracker._trackPageview();
-} catch(err) {}</script>
+
+<script type="text/javascript">var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www."); document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+
+<script type="text/javascript">try { var pageTracker = _gat._getTracker("UA-31257-1"); pageTracker._trackPageview(); } catch(err) {}</script>
+
+
+
 
 
 
