--- a/y/ya/yal/yalwa.in.html
+++ b/y/ya/yal/yalwa.in.html
@@ -1,67 +1,88 @@
-<!--The following is the downloaded HTML source of the yalwa.in privacy policy that was archived on 2009-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091218204459id_/http%3A//www.yalwa.in/info/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the yalwa.in privacy policy that was archived on 2010-09-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100916015548id_/http%3A//www.yalwa.in/info/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Yalwa Info pages</title>
 <meta name="description" content="Yalwa Info pages">
 <meta name="keywords" content="">
-
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<meta http-equiv="Language" content="en">
+<meta http-equiv="language" content="en">
 <meta http-equiv="content-language" content="en-IN">
 
-<link rel="stylesheet" href="http://static.yalwa.in/styles/main_yalwa.css" type="text/css">
-<link rel="icon" href="http://static.yalwa.in/favicon.ico" type="image/x-icon"> 
-<link rel="shortcut icon" href="http://static.yalwa.in/favicon.ico" type="image/x-icon"> 
+<link rel="stylesheet" href="http://static.yalwa.in/styles/2797_0914/main_yalwa.css" type="text/css">
+<link rel="icon" href="http://static.yalwa.in/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="http://static.yalwa.in/favicon.ico" type="image/x-icon">
+
 <meta name="robots" content="NOINDEX,FOLLOW,NOARCHIVE">
 <meta name="googlebot" content="NOINDEX,FOLLOW,NOARCHIVE">
 
-</head>
-<body>
 
 
-<!-- google_ad_section_start(weight=ignore) -->
-<script type="text/javascript" src="http://static.yalwa.in/js/basics.js"></script>
+<script type="text/javascript" src="http://static.yalwa.in/js/2797_0914/basics.js"></script>
+<script type="text/javascript" src="http://static.yalwa.in/js/2797_0914/setup_favs/"></script>
+<script type="text/javascript" src="http://static.yalwa.in/js/2797_0914/setup_login/"></script>
 
-<script>
+<script type="text/javascript">
+// <![CDATA[
 window.google_analytics_uacct = "UA-785042-33"
+// ]]>
 </script>
 <script type="text/javascript">
+// <![CDATA[
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+// ]]>
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
 <script type="text/javascript">
+// <![CDATA[
 var as_tracking_code = "";
-var secondTracker = _gat._getTracker("UA-785042-33");
-
 var pageTracker = _gat._getTracker("UA-2027383-3");
 
+var secondTracker = _gat._getTracker("UA-16150510-1");
+
+// ]]>
 </script>
 
+</head>
+<body onload="setupFavs();setupLogin();">
+<!-- google_ad_section_start(weight=ignore) -->
+<div id="main">
+	<div id="top">
+		<div id="above_tabs">
 
-<div style="width:1000px;margin:0 auto;text-align:left;display:block;"> 	<div id="top">
-		<div style="position:relative;">
-			<div class="logo">
-				<a href="/">
-				<img src="http://static.yalwa.in/images/Yalwa_180.jpg" border="0" title="Free Business Directory India" alt="Free Business Directory India"><img src="http://static.yalwa.in/images/flags/flag_in.png" border="0" alt="India">
-				</a>
-			</div>
-			
-			<div class="header_link_box">&nbsp;
-&nbsp;
-			</div>
-			
+		<div class="header_link_box">
+			<a rel="nofollow" href="http://www.yalwa.in/run/favorites/"><img src="http://static.yalwa.in/images/16/star_yellow.png" align="absmiddle" alt="My Favourite Listings"> (<span id="favorite_count">0</span>)</a> |			<a rel="nofollow" href="http://www.yalwa.in/faq/?action=show&amp;hl=en">Help</a>
+				| <a rel="nofollow" href="http://www.yalwa.in/run/my/">My Yalwa</a><br>
+				<span id="logged_in_address_field" style="display:none;"></span>
+			<span id="logged_in_logout_field" style="display:none;"></span>
+		
+		
+		</div>
 
-			<div class="location" style="width:750px;">
-				<div style="position:absolute;bottom:8px;">
-				<span class="title">Free Business Directory</span>				</div>
-			</div>
-			
-			<div style="clear:both;"></div>		</div>
-				<div class="topnav_reg"> </div>
-	</div>
 
-	<!-- google_ad_section_end(weight=ignore) -->
+
+
+		<div id="logo">
+			<a href="/">
+			<img src="http://static.yalwa.in/images/Yalwa_180.jpg" title="Free Business Directory India" alt="Free Business Directory India"><img src="http://static.yalwa.in/images/flags/flag_in.png" alt="India">
+			</a>
+		</div>
+
+		<div class="location ">
+			<h1>Free Business Directory</h1>
+					</div>
+		
+		</div>
+
+		<div id="divider"></div>
+		<div class="topnav">
+			
+			<div style="clear:both;"></div>
+		</div>
+			</div>
+
+<!-- google_ad_section_end(weight=ignore) --><div id="middleleft">
+
 <div id="middle">
 	<table cellpadding="0" cellspacing="0" border="0" width="760">
 		<tbody><tr>
@@ -94,73 +115,83 @@ var pageTracker = _gat._getTracker("UA-2027383-3");
 </ul>
 <div class="p">  <strong>Using Information from Yalwa.</strong>
  You may use personal information gathered from Yalwa only to follow up with another user about a specific posting, not to send spam or collect personal information from someone who hasn't agreed to that. </div>
-<div class="p">  <strong>Access, Modification, and Deletion.</strong> You can see, modify or erase your personal information by reviewing your posting or account status page.  Contact customer support  (<script type="text/javascript" language="javascript">
-	<!--
-	{ coded = "SR885Bu@vLKWL.29"
-		  key = "CylaqMYoiWxNurszGvKL70c52nJ4RBSU36pdEIOjf91QgeDmVP8TAZHwXhtbFk" 
-		  shift=coded.length
-		  link=""
-		  for (i=0; i<coded.length; i++) {
-		    if (key.indexOf(coded.charAt(i))==-1) {
-		      ltr = coded.charAt(i)
-		      link += (ltr)
-		    }
-		    else {     
-		      ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
-		      link += (key.charAt(ltr))
-		    }
-		  }document.write("<a href='mailto:"+link+"'>"+link+"<\/a>")
-		}
-//-->
-</script><a href="mailto:support@yalwa.in">support@yalwa.in</a><noscript>Sorry, you need Javascript ON to see the email address (spam protection).</noscript>) to review any personal information we store that is not available on Yalwa. There may a charge associated with such requests but these will not exceed the amounts permitted by law. We delete personal information when we no longer need it for the purposes we described earlier. We retain personal information as permitted by law to resolve disputes, enforce our policies; and prevent bad guys from coming back.</div>
+<div class="p">  <strong>Access, Modification, and Deletion.</strong> You can see, modify or erase your personal information by reviewing your posting or account status page.  Contact customer support  (<span id="my1562781329">Sorry, you need Javascript ON to see the email address (spam protection).</span>
+<script type="text/javascript">
+// <![CDATA[
+{
+coded = "G3HHle5@cy41y.pg"
+key = "fG8S54upFaBzKbVk2Ex9Od3HmyQYhjJCrLXoDNZPnc7vwUWseMtlqi0Rg6TA1I" 
+shift = coded.length
+link = ""
+for (i = 0; i < coded.length; i++) {
+	if (key.indexOf(coded.charAt(i))==-1) {
+		ltr = coded.charAt(i)
+		link += (ltr)
+	} else {     
+		ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
+		link += (key.charAt(ltr))
+	}
+}
+T$("my1562781329").innerHTML = "<a href='mailto:"+link+"'>"+link+"<\/a>";
+}
+//]]>
+</script>) to review any personal information we store that is not available on Yalwa. There may a charge associated with such requests but these will not exceed the amounts permitted by law. We delete personal information when we no longer need it for the purposes we described earlier. We retain personal information as permitted by law to resolve disputes, enforce our policies; and prevent bad guys from coming back.</div>
 
 <div class="p"><strong>Security.</strong> We use lots of tools (encryption, passwords, physical security) to protect your personal information against unauthorized access and disclosure, but as you probably know, nothing's perfect, so we make no guarantees.</div>
-<div class="p"><strong>General.</strong> We may update this policy at any time, with updates taking effect when you next post or after 30 days, whichever is sooner.  If we or our corporate affiliates are involved in a merger or acquisition, we may share personal information with another company, but this policy will continue to apply. Send questions about this policy to <script type="text/javascript" language="javascript">
-	<!--
-	{ coded = "W8UzSbA@ASZXS.UK"
-		  key = "UCo2JzEyZBsqnVwcrFa9I1OAGk0gK7Xb8DSNxY6Rep4LHtium3jvh5ldTWPQfM" 
-		  shift=coded.length
-		  link=""
-		  for (i=0; i<coded.length; i++) {
-		    if (key.indexOf(coded.charAt(i))==-1) {
-		      ltr = coded.charAt(i)
-		      link += (ltr)
-		    }
-		    else {     
-		      ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
-		      link += (key.charAt(ltr))
-		    }
-		  }document.write("<a href='mailto:"+link+"'>"+link+"<\/a>")
-		}
-//-->
-</script><a href="mailto:privacy@yalwa.in">privacy@yalwa.in</a><noscript>Sorry, you need Javascript ON to see the email address (spam protection).</noscript>.</div>
+<div class="p"><strong>General.</strong> We may update this policy at any time, with updates taking effect when you next post or after 30 days, whichever is sooner.  If we or our corporate affiliates are involved in a merger or acquisition, we may share personal information with another company, but this policy will continue to apply. Send questions about this policy to <span id="my551224568">Sorry, you need Javascript ON to see the email address (spam protection).</span>
+<script type="text/javascript">
+// <![CDATA[
+{
+coded = "BOMV4tx@x4j04.MI"
+key = "6d39lOHNnG5baRKyc1eDjJXCIFPs4U2xtwzYE8kpLiQhvWZTS0frAu7BqMomVg" 
+shift = coded.length
+link = ""
+for (i = 0; i < coded.length; i++) {
+	if (key.indexOf(coded.charAt(i))==-1) {
+		ltr = coded.charAt(i)
+		link += (ltr)
+	} else {     
+		ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
+		link += (key.charAt(ltr))
+	}
+}
+T$("my551224568").innerHTML = "<a href='mailto:"+link+"'>"+link+"<\/a>";
+}
+//]]>
+</script>.</div>
 				</div>
 			</td>
 		</tr>
 
 	</tbody></table>
-	</div><div class="footer">
+	</div>
+</div>
+<div class="footer">
 	<span class="first_element"><a target="_blank" rel="nofollow" href="http://www.yalwa.in/info/terms/">Terms of Use</a></span>
-	<span><a rel="nofollow" href="/info/imprint/">Imprint</a></span>
+	<span><a rel="nofollow" target="_blank" href="/info/imprint/">Imprint</a></span>
 	<span><a target="_blank" rel="nofollow" href="http://www.yalwa.in/info/privacy/">Privacy Policy</a></span>
 		  <span><a href="http://www.yalwa.info/local_business/blog/">Blog</a></span>
 							<span><a href="http://www.yalwa.in/faq/?action=contact&amp;hl=en">Contact Us</a></span>
 			
 	<br><br>
-	<span class="first_element">Copyright © 2009 Yalwa<sup><font size="-2">™</font></sup></span>
-</div>
+	<span class="first_element">Copyright © 2010 Yalwa<sup>™</sup></span>
 <br>
-<div class="fo">&nbsp;&nbsp;<i>sun4</i></div>
+</div>
+<div class="fo">&nbsp;&nbsp;<i>sun6</i></div>
+</div>
 
 <script type="text/javascript">
+// <![CDATA[
 pageTracker._trackPageview();
 
 secondTracker._trackPageview();
+// ]]>
 </script>
 
 
 
-</div>
+
+
 
 
 </body></html>
