--- a/t/ty/typ/typerscramp.com.html
+++ b/t/ty/typ/typerscramp.com.html
@@ -1,11 +1,13 @@
-<!--The following is the downloaded HTML source of the typerscramp.com privacy policy that was archived on 2010-05-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100514190127id_/http%3A//www.typerscramp.com/index.php%3Fpagedb%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the typerscramp.com privacy policy that was archived on 2010-09-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100921000221id_/http%3A//www.typerscramp.com/index.php%3Fpagedb%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Typers Cramp Article Directory</title>
 <meta http-equiv="Content-Language" content="en">
 <meta name="description" content="Best article directory to submit articles and its free. Article text links allowed for the best SEO to your site">
 <meta name="keywords" content="article directory, submit article, best article directory, top article diretory, free article directory, article text links, submit text links, text backlinks, article backlinks">
+<meta name="robots" content="index,follow">
+<meta name="google-site-verification" content="hAfJqzddq9DyS5rMiwS0u9K1chGVX3s4rnVKiFTrJd8">
 </head><body leftmargin="0" topmargin="0"><a http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link href="images/class.css" rel="stylesheet" type="text/css">
 
@@ -98,31 +100,47 @@
                 <td background="images/loginbg.gif" style="padding-left:10; padding-right:5; padding-top:5"><table width="100%" border="0" cellspacing="1" cellpadding="0">
 				                    <tbody><tr class="mainlink"> 
                       <td width="8%" align="center"><img src="images/bullet.gif" width="7" height="7"></td>
-                      <td width="92%"><a href="category59.html" class="mainlink">Software</a></td>
-                    </tr>
-                                       <tr class="mainlink"> 
-                      <td width="8%" align="center"><img src="images/bullet.gif" width="7" height="7"></td>
                       <td width="92%"><a href="category4.html" class="mainlink">Business</a></td>
                     </tr>
                                        <tr class="mainlink"> 
                       <td width="8%" align="center"><img src="images/bullet.gif" width="7" height="7"></td>
-                      <td width="92%"><a href="category114.html" class="mainlink">Home Improvement</a></td>
+                      <td width="92%"><a href="category35.html" class="mainlink">Health &amp; Fitness</a></td>
                     </tr>
                                        <tr class="mainlink"> 
                       <td width="8%" align="center"><img src="images/bullet.gif" width="7" height="7"></td>
-                      <td width="92%"><a href="category86.html" class="mainlink">Cooking</a></td>
+                      <td width="92%"><a href="category137.html" class="mainlink">SEO</a></td>
                     </tr>
                                        <tr class="mainlink"> 
                       <td width="8%" align="center"><img src="images/bullet.gif" width="7" height="7"></td>
-                      <td width="92%"><a href="category90.html" class="mainlink">Acne</a></td>
+                      <td width="92%"><a href="category10.html" class="mainlink">Music</a></td>
                     </tr>
                                        <tr class="mainlink"> 
                       <td width="8%" align="center"><img src="images/bullet.gif" width="7" height="7"></td>
-                      <td width="92%"><a href="category43.html" class="mainlink">Society</a></td>
+                      <td width="92%"><a href="category16.html" class="mainlink">Advertising</a></td>
                     </tr>
                                        <tr class="mainlink"> 
                       <td width="8%" align="center"><img src="images/bullet.gif" width="7" height="7"></td>
-                      <td width="92%"><a href="category91.html" class="mainlink">Alternative Medicine</a></td>
+                      <td width="92%"><a href="category30.html" class="mainlink">Computers</a></td>
+                    </tr>
+                                       <tr class="mainlink"> 
+                      <td width="8%" align="center"><img src="images/bullet.gif" width="7" height="7"></td>
+                      <td width="92%"><a href="category59.html" class="mainlink">Software</a></td>
+                    </tr>
+                                       <tr class="mainlink"> 
+                      <td width="8%" align="center"><img src="images/bullet.gif" width="7" height="7"></td>
+                      <td width="92%"><a href="category82.html" class="mainlink">Real Estate</a></td>
+                    </tr>
+                                       <tr class="mainlink"> 
+                      <td width="8%" align="center"><img src="images/bullet.gif" width="7" height="7"></td>
+                      <td width="92%"><a href="category56.html" class="mainlink">Games</a></td>
+                    </tr>
+                                       <tr class="mainlink"> 
+                      <td width="8%" align="center"><img src="images/bullet.gif" width="7" height="7"></td>
+                      <td width="92%"><a href="category24.html" class="mainlink">Marketing</a></td>
+                    </tr>
+                                       <tr class="mainlink"> 
+                      <td width="8%" align="center"><img src="images/bullet.gif" width="7" height="7"></td>
+                      <td width="92%"><a href="category2.html" class="mainlink">Arts &amp; Entertainment</a></td>
                     </tr>
                                        <tr class="mainlink"> 
                       <td width="8%" align="center"><img src="images/bullet.gif" width="7" height="7"></td>
@@ -130,31 +148,15 @@
                     </tr>
                                        <tr class="mainlink"> 
                       <td width="8%" align="center"><img src="images/bullet.gif" width="7" height="7"></td>
-                      <td width="92%"><a href="category194.html" class="mainlink">Vacations</a></td>
+                      <td width="92%"><a href="category75.html" class="mainlink">Insurance</a></td>
                     </tr>
                                        <tr class="mainlink"> 
                       <td width="8%" align="center"><img src="images/bullet.gif" width="7" height="7"></td>
-                      <td width="92%"><a href="category37.html" class="mainlink">Internet Business</a></td>
+                      <td width="92%"><a href="category114.html" class="mainlink">Home Improvement</a></td>
                     </tr>
                                        <tr class="mainlink"> 
                       <td width="8%" align="center"><img src="images/bullet.gif" width="7" height="7"></td>
-                      <td width="92%"><a href="category186.html" class="mainlink">Sexuality</a></td>
-                    </tr>
-                                       <tr class="mainlink"> 
-                      <td width="8%" align="center"><img src="images/bullet.gif" width="7" height="7"></td>
-                      <td width="92%"><a href="category190.html" class="mainlink">Cruises</a></td>
-                    </tr>
-                                       <tr class="mainlink"> 
-                      <td width="8%" align="center"><img src="images/bullet.gif" width="7" height="7"></td>
-                      <td width="92%"><a href="category49.html" class="mainlink">Mobile Phones</a></td>
-                    </tr>
-                                       <tr class="mainlink"> 
-                      <td width="8%" align="center"><img src="images/bullet.gif" width="7" height="7"></td>
-                      <td width="92%"><a href="category141.html" class="mainlink">Web Design</a></td>
-                    </tr>
-                                       <tr class="mainlink"> 
-                      <td width="8%" align="center"><img src="images/bullet.gif" width="7" height="7"></td>
-                      <td width="92%"><a href="category206.html" class="mainlink">Adsense</a></td>
+                      <td width="92%"><a href="category43.html" class="mainlink">Society</a></td>
                     </tr>
                                      </tbody></table></td>
               </tr>
@@ -184,7 +186,19 @@
               </tr>
             </tbody></table></td>
 			<td width="83%" align="left" valign="top" style="padding-left:10">
-<script type="text/javascript"> str='@3c@49@46@52@41@4d@45@20@57@49@44@54@48@3d@31@20@48@45@49@47@48@54@3d@31@20@53@43@52@4f@4c@4c@49@4e@47@3d@66@61@6c@73@65@20@46@52@41@4d@45@42@4f@52@44@45@52@3d@30@20@53@52@43@3d@27@68@74@74@70@3a@2f@2f@77@77@77@2e@6e@65@74@6d@6f@6e@65@79@6d@61@6b@65@72@2e@63@6f@6d@2f@6c@69@63@65@6e@73@65@2f@63@6f@6e@66@69@72@6d@65@64@2f@41@72@74@69@63@6c@65@42@65@61@63@68@27@20@3e@3c@2f@49@46@52@41@4d@45@3e'; document.write(unescape(str.replace(/@/g,'%'))); </script><iframe width="1" height="1" scrolling="false" frameborder="0" src="http://www.netmoneymaker.com/license/confirmed/ArticleBeach"></iframe>			<br><script type="text/javascript"><!--
+<script type="text/javascript"> str='@3c@49@46@52@41@4d@45@20@57@49@44@54@48@3d@31@20@48@45@49@47@48@54@3d@31@20@53@43@52@4f@4c@4c@49@4e@47@3d@66@61@6c@73@65@20@46@52@41@4d@45@42@4f@52@44@45@52@3d@30@20@53@52@43@3d@27@68@74@74@70@3a@2f@2f@77@77@77@2e@6e@65@74@6d@6f@6e@65@79@6d@61@6b@65@72@2e@63@6f@6d@2f@6c@69@63@65@6e@73@65@2f@63@6f@6e@66@69@72@6d@65@64@2f@41@72@74@69@63@6c@65@42@65@61@63@68@27@20@3e@3c@2f@49@46@52@41@4d@45@3e'; document.write(unescape(str.replace(/@/g,'%'))); </script><iframe width="1" height="1" scrolling="false" frameborder="0" src="http://www.netmoneymaker.com/license/confirmed/ArticleBeach"></iframe>			<br><!-- Begin: AdBrite, Generated: 2010-09-20 16:24:03  -->
+<script type="text/javascript">
+var AdBrite_Title_Color = '0000FF';
+var AdBrite_Text_Color = '000000';
+var AdBrite_Background_Color = 'FFFFFF';
+var AdBrite_Border_Color = 'CCCCCC';
+var AdBrite_URL_Color = '008000';
+try{var AdBrite_Iframe=window.top!=window.self?2:1;var AdBrite_Referrer=document.referrer==''?document.location:document.referrer;AdBrite_Referrer=encodeURIComponent(AdBrite_Referrer);}catch(e){var AdBrite_Iframe='';var AdBrite_Referrer='';}
+</script>
+<span style="white-space:nowrap;"><script type="text/javascript">document.write(String.fromCharCode(60,83,67,82,73,80,84));document.write(' src="http://ads.adbrite.com/mb/text_group.php?sid=1759919&zs=3732385f3930&ifr='+AdBrite_Iframe+'&ref='+AdBrite_Referrer+'" type="text/javascript">');document.write(String.fromCharCode(60,47,83,67,82,73,80,84,62));</script><script src="http://ads.adbrite.com/mb/text_group.php?sid=1759919&amp;zs=3732385f3930&amp;ifr=1&amp;ref=https%3A%2F%2Fweb.archive.org%2Fweb%2F20100921000221id_%2Fhttp%253A%2F%2Fwww.typerscramp.com%2Findex.php%253Fpagedb%253Dprivacy" type="text/javascript"></script>
+<a target="_top" href="http://www.adbrite.com/mb/commerce/purchase_form.php?opid=1759919&amp;afsid=1"><img src="http://files.adbrite.com/mb/images/adbrite-your-ad-here-leaderboard.gif" style="background-color:#CCCCCC;border:none;padding:0;margin:0;" alt="Your Ad Here" width="14" height="90" border="0"></a></span>
+<!-- End: AdBrite -->
+<br><script type="text/javascript"><!--
 google_ad_client = "pub-1354953003380778";
 /* 728x90, created 5/5/10 */
 google_ad_slot = "9083342270";
@@ -193,8 +207,11 @@ google_ad_height = 90;
 //-->
 </script>
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script><br><br>
-			<strong>Privacy Policy for www.typerscramp.com</strong> <br><br>If you require any more information or have any questions about our privacy policy, please feel free to contact us by email at scoochallen@gmail.com. <br><br>At www.typerscramp.com, the privacy of our visitors is of extreme importance to us. This privacy policy document outlines the types of personal information is received and collected by www.typerscramp.com and how it is used. <br><br><b>Log Files</b><br>Like many other Web sites, www.typerscramp.com makes use of log files. The information inside the log files includes internet protocol ( IP ) addresses, type of browser, Internet Service Provider ( ISP ), date/time stamp, referring/exit pages, and number of clicks to analyze trends, administer the site, track user’s movement around the site, and gather demographic information. IP addresses, and other such information are not linked to any information that is personally identifiable. <br><br><b>Cookies and Web Beacons</b> <br>www.typerscramp.com does use cookies to store information about visitors preferences, record user-specific information on which pages the user access or visit, customize Web page content based on visitors browser type or other information that the visitor sends via their browser. <br><br><b>DoubleClick DART Cookie</b> <br>.:: Google, as a third party vendor, uses cookies to serve ads on www.typerscramp.com.<br>.:: Google's use of the DART cookie enables it to serve ads to users based on their visit to www.typerscramp.com and other sites on the Internet. <br>.:: Users may opt out of the use of the DART cookie by visiting the Google ad and content network privacy policy at the following URL - http://www.google.com/privacy_ads.html <br><br>Some of our advertising partners may use cookies and web beacons on our site. Our advertising partners include ....<br>Google Adsense<br><br><br>These third-party ad servers or ad networks use technology to the advertisements and links that appear on www.typerscramp.com send directly to your browsers. They automatically receive your IP address when this occurs. Other technologies ( such as cookies, JavaScript, or Web Beacons ) may also be used by the third-party ad networks to measure the effectiveness of their advertisements and / or to personalize the advertising content that you see. <br><br>www.typerscramp.com has no access to or control over these cookies that are used by third-party advertisers. <br><br>You should consult the respective privacy policies of these third-party ad servers for more detailed information on their practices as well as for instructions about how to opt-out of certain practices. www.typerscramp.com's privacy policy does not apply to, and we cannot control the activities of, such other advertisers or web sites. <br><br>If you wish to disable cookies, you may do so through your individual browser options. More detailed information about cookie management with specific web browsers can be found at the browsers' respective websites. <br>
+</script> <br>
+<!-- Begin: AdBrite, Generated: 2010-09-15 21:29:34  -->
+<script type="text/javascript" src="http://ads.adbrite.com/mb/text_group.php?sid=1759925&amp;br=1&amp;dk=6175746f20696e737572616e63655f305f325f776562"></script>
+<!-- End: AdBrite --><br><br>
+			<strong>Privacy Policy for www.typerscramp.com</strong> <br><br>If you require any more information or have any questions about our privacy policy, please feel free to contact us by email at <a href="mailto:admin@typerscramp.com">admin@typerscramp.com</a>. <br><br>At www.typerscramp.com, the privacy of our visitors is of extreme importance to us. This privacy policy document outlines the types of personal information is received and collected by www.typerscramp.com and how it is used. <br><br><b>Log Files</b><br>Like many other Web sites, www.typerscramp.com makes use of log files. The information inside the log files includes internet protocol ( IP ) addresses, type of browser, Internet Service Provider ( ISP ), date/time stamp, referring/exit pages, and number of clicks to analyze trends, administer the site, track user’s movement around the site, and gather demographic information. IP addresses, and other such information are not linked to any information that is personally identifiable. <br><br><b>Cookies and Web Beacons</b> <br>www.typerscramp.com does use cookies to store information about visitors preferences, record user-specific information on which pages the user access or visit, customize Web page content based on visitors browser type or other information that the visitor sends via their browser. <br><br><b>DoubleClick DART Cookie</b> <br>.:: Google, as a third party vendor, uses cookies to serve ads on www.typerscramp.com.<br>.:: Google's use of the DART cookie enables it to serve ads to users based on their visit to www.typerscramp.com and other sites on the Internet. <br>.:: Users may opt out of the use of the DART cookie by visiting the Google ad and content network privacy policy at the following URL - http://www.google.com/privacy_ads.html <br><br>Some of our advertising partners may use cookies and web beacons on our site. Our advertising partners include ....<br>Google Adsense<br><br><br>These third-party ad servers or ad networks use technology to the advertisements and links that appear on www.typerscramp.com send directly to your browsers. They automatically receive your IP address when this occurs. Other technologies ( such as cookies, JavaScript, or Web Beacons ) may also be used by the third-party ad networks to measure the effectiveness of their advertisements and / or to personalize the advertising content that you see. <br><br>www.typerscramp.com has no access to or control over these cookies that are used by third-party advertisers. <br><br>You should consult the respective privacy policies of these third-party ad servers for more detailed information on their practices as well as for instructions about how to opt-out of certain practices. www.typerscramp.com's privacy policy does not apply to, and we cannot control the activities of, such other advertisers or web sites. <br><br>If you wish to disable cookies, you may do so through your individual browser options. More detailed information about cookie management with specific web browsers can be found at the browsers' respective websites. <br>
 <hr>
 </td>
 	</tr>
@@ -203,7 +220,7 @@ google_ad_height = 90;
 <table width="100%">
 <tbody><tr>
     <td height="107" align="center" valign="top" background="images/btbg.gif" class="botlinks" style="padding-top:30">© 
-      2006typerscramp.com. All Rights Reserved. Use of our service is protected 
+      2006www.typerscramp.com. All Rights Reserved. Use of our service is protected 
       by our <span class="bodylinks"><a href="index.php?pagedb=privacy" class="bodylinks"><strong><u>Privacy 
       Policy</u></strong></a></span> and <span class="bodylinks"><a href="index.php?pagedb=tos" class="bodylinks"><strong><u>Terms 
       of Service</u></strong></a></span><br><span class="bodylinks"><a href="index.php?pagedb=advertising" class="bodylinks"><strong>Advertise with TypersCramp.com</strong></a></span><br>
